// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`IngestionConsumer error handling should handle explicitly non retriable errors by sending to DLQ 1`] = `
[
  {
    "key": null,
    "topic": "events_plugin_ingestion_dlq_test",
    "value": {
      "data": "{"distinct_id":"user-1","uuid":"<REPLACED-UUID-1>","token":"THIS IS NOT A TOKEN FOR TEAM 2","ip":"127.0.0.1","site_url":"us.posthog.com","now":"2025-01-01T00:00:00.000Z","event":"$pageview","properties":{"$current_url":"http://localhost:8000"}}",
      "distinct_id": "user-1",
      "ip": "127.0.0.1",
      "now": "2025-01-01T00:00:00.000Z",
      "token": "THIS IS NOT A TOKEN FOR TEAM 2",
      "uuid": "<REPLACED-UUID-0>",
    },
  },
]
`;

exports[`IngestionConsumer general overflow should allow some events to pass 1`] = `
[
  {
    "key": null,
    "topic": "events_plugin_ingestion_overflow_test",
    "value": {
      "data": "{"distinct_id":"overflow-distinct-id","uuid":"<REPLACED-UUID-1>","token":"THIS IS NOT A TOKEN FOR TEAM 2","ip":"127.0.0.1","site_url":"us.posthog.com","now":"2025-01-01T00:00:00.000Z","event":"$pageview","properties":{"$current_url":"http://localhost:8000"}}",
      "distinct_id": "overflow-distinct-id",
      "ip": "127.0.0.1",
      "now": "2025-01-01T00:00:00.000Z",
      "token": "THIS IS NOT A TOKEN FOR TEAM 2",
      "uuid": "<REPLACED-UUID-0>",
    },
  },
  {
    "key": null,
    "topic": "events_plugin_ingestion_overflow_test",
    "value": {
      "data": "{"distinct_id":"overflow-distinct-id","uuid":"<REPLACED-UUID-2>","token":"THIS IS NOT A TOKEN FOR TEAM 2","ip":"127.0.0.1","site_url":"us.posthog.com","now":"2025-01-01T00:00:00.000Z","event":"$pageview","properties":{"$current_url":"http://localhost:8000"}}",
      "distinct_id": "overflow-distinct-id",
      "ip": "127.0.0.1",
      "now": "2025-01-01T00:00:00.000Z",
      "token": "THIS IS NOT A TOKEN FOR TEAM 2",
      "uuid": "<REPLACED-UUID-1>",
    },
  },
]
`;

exports[`IngestionConsumer general overflow should emit to overflow if token and distinct_id are overflowed 1`] = `
[
  {
    "key": null,
    "topic": "events_plugin_ingestion_overflow_test",
    "value": {
      "data": "{"distinct_id":"overflow-distinct-id","uuid":"<REPLACED-UUID-1>","token":"THIS IS NOT A TOKEN FOR TEAM 2","ip":"127.0.0.1","site_url":"us.posthog.com","now":"2025-01-01T00:00:00.000Z","event":"$pageview","properties":{"$current_url":"http://localhost:8000"}}",
      "distinct_id": "overflow-distinct-id",
      "ip": "127.0.0.1",
      "now": "2025-01-01T00:00:00.000Z",
      "token": "THIS IS NOT A TOKEN FOR TEAM 2",
      "uuid": "<REPLACED-UUID-0>",
    },
  },
]
`;

exports[`IngestionConsumer general should process a standard event 1`] = `
[
  {
    "key": "<REPLACED-UUID-0>",
    "topic": "clickhouse_events_json_test",
    "value": {
      "created_at": "2025-01-01 00:00:00.000",
      "distinct_id": "user-1",
      "elements_chain": "",
      "event": "$pageview",
      "person_created_at": "2025-01-01 00:00:00",
      "person_id": "<REPLACED-UUID-1>",
      "person_mode": "full",
      "person_properties": "{"$current_url":"http://localhost:8000","$creator_event_uuid":"<REPLACED-UUID-2>","$initial_current_url":"http://localhost:8000"}",
      "project_id": 2,
      "properties": "{"$current_url":"http://localhost:8000","$ip":"127.0.0.1","$set":{"$current_url":"http://localhost:8000"},"$set_once":{"$initial_current_url":"http://localhost:8000"}}",
      "team_id": 2,
      "timestamp": "2025-01-01 00:00:00.000",
      "uuid": "<REPLACED-UUID-1>",
    },
  },
  {
    "key": null,
    "topic": "clickhouse_person_test",
    "value": {
      "created_at": "2025-01-01 00:00:00",
      "id": "<REPLACED-UUID-2>",
      "is_deleted": 0,
      "is_identified": 0,
      "properties": "{"$current_url":"http://localhost:8000","$creator_event_uuid":"<REPLACED-UUID-2>","$initial_current_url":"http://localhost:8000"}",
      "team_id": 2,
      "version": 0,
    },
  },
  {
    "key": null,
    "topic": "clickhouse_person_distinct_id_test",
    "value": {
      "distinct_id": "user-1",
      "is_deleted": 0,
      "person_id": "<REPLACED-UUID-2>",
      "team_id": 2,
      "version": 0,
    },
  },
]
`;

exports[`IngestionConsumer transformation chains should chain transformations in correct order and filter bot events 1`] = `
[
  {
    "key": "<REPLACED-UUID-0>",
    "topic": "clickhouse_events_json_test",
    "value": {
      "created_at": "2025-01-01 00:00:00.000",
      "distinct_id": "a8821accd5dcd728644298e978a736f4380ff2cd6afdf8354ac3d8a5ede1244a",
      "elements_chain": "",
      "event": "button_clicked",
      "person_created_at": "2024-01-01 12:30:45",
      "person_id": "<REPLACED-UUID-11>",
      "person_mode": "full",
      "person_properties": "{"$referrer":"https://other.com?email=old@test.com&token=xyz789","$current_url":"https://example.com?email=test@test.com&password=secret&token=abc123&safe=value","$geoip_latitude":58.4167,"$geoip_city_name":"Linköping","$geoip_longitude":15.6167,"$geoip_time_zone":"Europe/Stockholm","$initial_referrer":"https://other.com?email=old@test.com&token=xyz789","$creator_event_uuid":"<REPLACED-UUID-12>","$geoip_country_code":"SE","$geoip_country_name":"Sweden","$initial_current_url":"https://example.com?email=test@test.com&password=secret&token=abc123&safe=value","$geoip_continent_code":"EU","$geoip_continent_name":"Europe","$geoip_accuracy_radius":76,"$initial_geoip_latitude":58.4167,"$initial_geoip_city_name":"Linköping","$initial_geoip_longitude":15.6167,"$initial_geoip_time_zone":"Europe/Stockholm","$geoip_subdivision_1_code":"E","$geoip_subdivision_1_name":"Östergötland County","$initial_geoip_country_code":"SE","$initial_geoip_country_name":"Sweden","$initial_geoip_continent_code":"EU","$initial_geoip_continent_name":"Europe","$initial_geoip_accuracy_radius":76,"$initial_geoip_subdivision_1_code":"E","$initial_geoip_subdivision_1_name":"Östergötland County"}",
      "project_id": 2,
      "properties": "{"$ip":"89.160.20.0","$useragent":"Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36","$current_url":"https://example.com?email=[MASKED]&password=[MASKED]&token=[MASKED]&safe=value","$referrer":"https://other.com?email=[MASKED]&token=[MASKED]","validProp":"value","nested":{"validInner":"inner-value"},"app_version":"1.2.3-beta+exp.sha.5114f85","lib_version":"2.0.0-alpha+001","$set":{"$current_url":"https://example.com?email=test@test.com&password=secret&token=abc123&safe=value","$referrer":"https://other.com?email=old@test.com&token=xyz789","$geoip_city_name":"Linköping","$geoip_subdivision_1_name":"Östergötland County","$geoip_subdivision_1_code":"E","$geoip_country_name":"Sweden","$geoip_country_code":"SE","$geoip_continent_name":"Europe","$geoip_continent_code":"EU","$geoip_latitude":58.4167,"$geoip_longitude":15.6167,"$geoip_accuracy_radius":76,"$geoip_time_zone":"Europe/Stockholm"},"$set_once":{"$initial_current_url":"https://example.com?email=test@test.com&password=secret&token=abc123&safe=value","$initial_referrer":"https://other.com?email=old@test.com&token=xyz789","$initial_geoip_city_name":"Linköping","$initial_geoip_subdivision_1_name":"Östergötland County","$initial_geoip_subdivision_1_code":"E","$initial_geoip_country_name":"Sweden","$initial_geoip_country_code":"SE","$initial_geoip_continent_name":"Europe","$initial_geoip_continent_code":"EU","$initial_geoip_latitude":58.4167,"$initial_geoip_longitude":15.6167,"$initial_geoip_accuracy_radius":76,"$initial_geoip_time_zone":"Europe/Stockholm"},"$geoip_city_name":"bdd8ccc3008d8fefb6c8178744e9f84264575e11fdb6dbd222bfc2b94e31a539","$geoip_country_name":"bafd04fa615d500d269c5f5b020896686c11bcd310581afcc25b0050cf7c4e45","$geoip_country_code":"SE","$geoip_continent_name":"Europe","$geoip_continent_code":"EU","$geoip_accuracy_radius":76,"$geoip_time_zone":"Europe/Stockholm","$geoip_subdivision_1_code":"E","$geoip_subdivision_1_name":"Östergötland County","app_version__major":1,"app_version__minor":2,"app_version__patch":3,"app_version__preRelease":"beta","app_version__build":"exp.sha.5114f85","lib_version__major":2,"lib_version__minor":0,"lib_version__patch":0,"lib_version__preRelease":"alpha","lib_version__build":"001","day_of_the_week":"Monday","day":"01","month":"01","year":"2024","hour":13,"minute":30,"$transformations_succeeded":["Bot Detection (<REPLACED-UUID-1>)","GeoIP Transformation (<REPLACED-UUID-2>)","Remove Null Properties (<REPLACED-UUID-3>)","URL Parameter Masking (<REPLACED-UUID-4>)","PII Hashing Transformation (<REPLACED-UUID-5>)","IP Anonymization Transformation (<REPLACED-UUID-6>)","Property Filter (<REPLACED-UUID-7>)","SemVer Flattener (<REPLACED-UUID-8>)","Taxonomy (<REPLACED-UUID-9>)","Timestamp Parser (<REPLACED-UUID-10>)"],"$transformations_failed":[]}",
      "team_id": 2,
      "timestamp": "2024-01-01 12:30:45.000",
      "uuid": "<REPLACED-UUID>",
    },
  },
  {
    "key": "<REPLACED-UUID-12>",
    "topic": "clickhouse_app_metrics2_test",
    "value": {
      "app_source": "hog_function",
      "app_source_id": "<REPLACED-UUID-12>",
      "count": 1,
      "metric_kind": "success",
      "metric_name": "succeeded",
      "team_id": 2,
      "timestamp": "2025-01-01 00:00:00.000",
    },
  },
  {
    "key": "<REPLACED-UUID-12>",
    "topic": "log_entries_test",
    "value": {
      "instance_id": "<REPLACED-UUID-13>",
      "level": "debug",
      "log_source": "hog_function",
      "log_source_id": "<REPLACED-UUID-13>",
      "message": "Executing function",
      "team_id": 2,
      "timestamp": "2025-01-01 00:00:00.000",
    },
  },
  {
    "key": "<REPLACED-UUID-13>",
    "topic": "log_entries_test",
    "value": {
      "instance_id": "<REPLACED-UUID-13>",
      "level": "debug",
      "log_source": "hog_function",
      "log_source_id": "<REPLACED-UUID-13>",
      "message": "Function completed in <timing>ms. Sync: 0ms. Mem: 21862 bytes. Ops: 347. Event: 'https://example.com?email=bot@test.com&password=secret&token=abc123'",
      "team_id": 2,
      "timestamp": "2025-01-01 00:00:00.001",
    },
  },
  {
    "key": "<REPLACED-UUID-13>",
    "topic": "clickhouse_app_metrics2_test",
    "value": {
      "app_source": "hog_function",
      "app_source_id": "<REPLACED-UUID-13>",
      "count": 1,
      "metric_kind": "success",
      "metric_name": "succeeded",
      "team_id": 2,
      "timestamp": "2025-01-01 00:00:00.000",
    },
  },
  {
    "key": "<REPLACED-UUID-13>",
    "topic": "log_entries_test",
    "value": {
      "instance_id": "<REPLACED-UUID-14>",
      "level": "debug",
      "log_source": "hog_function",
      "log_source_id": "<REPLACED-UUID-14>",
      "message": "Executing function",
      "team_id": 2,
      "timestamp": "2025-01-01 00:00:00.000",
    },
  },
  {
    "key": "<REPLACED-UUID-14>",
    "topic": "log_entries_test",
    "value": {
      "instance_id": "<REPLACED-UUID-14>",
      "level": "debug",
      "log_source": "hog_function",
      "log_source_id": "<REPLACED-UUID-14>",
      "message": "Function completed in <timing>ms. Sync: 0ms. Mem: 21873 bytes. Ops: 4306. Event: 'https://example.com?email=test@test.com&password=secret&token=abc123&safe=value'",
      "team_id": 2,
      "timestamp": "2025-01-01 00:00:00.001",
    },
  },
  {
    "key": "<REPLACED-UUID-14>",
    "topic": "clickhouse_app_metrics2_test",
    "value": {
      "app_source": "hog_function",
      "app_source_id": "<REPLACED-UUID-14>",
      "count": 1,
      "metric_kind": "success",
      "metric_name": "succeeded",
      "team_id": 2,
      "timestamp": "2025-01-01 00:00:00.000",
    },
  },
  {
    "key": "<REPLACED-UUID-14>",
    "topic": "log_entries_test",
    "value": {
      "instance_id": "<REPLACED-UUID-15>",
      "level": "debug",
      "log_source": "hog_function",
      "log_source_id": "<REPLACED-UUID-15>",
      "message": "Executing function",
      "team_id": 2,
      "timestamp": "2025-01-01 00:00:00.000",
    },
  },
  {
    "key": "<REPLACED-UUID-15>",
    "topic": "log_entries_test",
    "value": {
      "instance_id": "<REPLACED-UUID-15>",
      "level": "info",
      "log_source": "hog_function",
      "log_source_id": "<REPLACED-UUID-15>",
      "message": "geoip location data for ip:, {"city_name":"Linköping","country_name":"Sweden","country_code":"SE","continent_name":"Europe","continent_code":"EU","latitude":58.4167,"longitude":15.6167,"accuracy_radius":76,"time_zone":"Europe/Stockholm","subdivision_1_code":"E","subdivision_1_name":"Östergötland County"}",
      "team_id": 2,
      "timestamp": "2025-01-01 00:00:00.001",
    },
  },
  {
    "key": "<REPLACED-UUID-15>",
    "topic": "log_entries_test",
    "value": {
      "instance_id": "<REPLACED-UUID-15>",
      "level": "debug",
      "log_source": "hog_function",
      "log_source_id": "<REPLACED-UUID-15>",
      "message": "Function completed in <timing>ms. Sync: 0ms. Mem: 7722 bytes. Ops: 1413. Event: 'https://example.com?email=test@test.com&password=secret&token=abc123&safe=value'",
      "team_id": 2,
      "timestamp": "2025-01-01 00:00:00.002",
    },
  },
  {
    "key": "<REPLACED-UUID-15>",
    "topic": "clickhouse_app_metrics2_test",
    "value": {
      "app_source": "hog_function",
      "app_source_id": "<REPLACED-UUID-15>",
      "count": 1,
      "metric_kind": "success",
      "metric_name": "succeeded",
      "team_id": 2,
      "timestamp": "2025-01-01 00:00:00.000",
    },
  },
  {
    "key": "<REPLACED-UUID-15>",
    "topic": "log_entries_test",
    "value": {
      "instance_id": "<REPLACED-UUID-16>",
      "level": "debug",
      "log_source": "hog_function",
      "log_source_id": "<REPLACED-UUID-16>",
      "message": "Executing function",
      "team_id": 2,
      "timestamp": "2025-01-01 00:00:00.000",
    },
  },
  {
    "key": "<REPLACED-UUID-16>",
    "topic": "log_entries_test",
    "value": {
      "instance_id": "<REPLACED-UUID-16>",
      "level": "debug",
      "log_source": "hog_function",
      "log_source_id": "<REPLACED-UUID-16>",
      "message": "Function completed in <timing>ms. Sync: 0ms. Mem: 9046 bytes. Ops: 16. Event: 'https://example.com?email=test@test.com&password=secret&token=abc123&safe=value'",
      "team_id": 2,
      "timestamp": "2025-01-01 00:00:00.001",
    },
  },
  {
    "key": "<REPLACED-UUID-16>",
    "topic": "clickhouse_app_metrics2_test",
    "value": {
      "app_source": "hog_function",
      "app_source_id": "<REPLACED-UUID-16>",
      "count": 1,
      "metric_kind": "success",
      "metric_name": "succeeded",
      "team_id": 2,
      "timestamp": "2025-01-01 00:00:00.000",
    },
  },
  {
    "key": "<REPLACED-UUID-16>",
    "topic": "log_entries_test",
    "value": {
      "instance_id": "<REPLACED-UUID-17>",
      "level": "debug",
      "log_source": "hog_function",
      "log_source_id": "<REPLACED-UUID-17>",
      "message": "Executing function",
      "team_id": 2,
      "timestamp": "2025-01-01 00:00:00.000",
    },
  },
  {
    "key": "<REPLACED-UUID-17>",
    "topic": "log_entries_test",
    "value": {
      "instance_id": "<REPLACED-UUID-17>",
      "level": "debug",
      "log_source": "hog_function",
      "log_source_id": "<REPLACED-UUID-17>",
      "message": "Function completed in <timing>ms. Sync: 0ms. Mem: 8367 bytes. Ops: 797. Event: 'https://example.com?email=test@test.com&password=secret&token=abc123&safe=value'",
      "team_id": 2,
      "timestamp": "2025-01-01 00:00:00.001",
    },
  },
  {
    "key": "<REPLACED-UUID-17>",
    "topic": "clickhouse_app_metrics2_test",
    "value": {
      "app_source": "hog_function",
      "app_source_id": "<REPLACED-UUID-17>",
      "count": 1,
      "metric_kind": "success",
      "metric_name": "succeeded",
      "team_id": 2,
      "timestamp": "2025-01-01 00:00:00.000",
    },
  },
  {
    "key": "<REPLACED-UUID-17>",
    "topic": "log_entries_test",
    "value": {
      "instance_id": "<REPLACED-UUID-18>",
      "level": "debug",
      "log_source": "hog_function",
      "log_source_id": "<REPLACED-UUID-18>",
      "message": "Executing function",
      "team_id": 2,
      "timestamp": "2025-01-01 00:00:00.000",
    },
  },
  {
    "key": "<REPLACED-UUID-18>",
    "topic": "log_entries_test",
    "value": {
      "instance_id": "<REPLACED-UUID-18>",
      "level": "debug",
      "log_source": "hog_function",
      "log_source_id": "<REPLACED-UUID-18>",
      "message": "Function completed in <timing>ms. Sync: 0ms. Mem: 11205 bytes. Ops: 296. Event: 'https://example.com?email=[MASKED]&password=[MASKED]&token=[MASKED]&safe=value'",
      "team_id": 2,
      "timestamp": "2025-01-01 00:00:00.001",
    },
  },
  {
    "key": "<REPLACED-UUID-18>",
    "topic": "clickhouse_app_metrics2_test",
    "value": {
      "app_source": "hog_function",
      "app_source_id": "<REPLACED-UUID-18>",
      "count": 1,
      "metric_kind": "success",
      "metric_name": "succeeded",
      "team_id": 2,
      "timestamp": "2025-01-01 00:00:00.000",
    },
  },
  {
    "key": "<REPLACED-UUID-18>",
    "topic": "log_entries_test",
    "value": {
      "instance_id": "<REPLACED-UUID-19>",
      "level": "debug",
      "log_source": "hog_function",
      "log_source_id": "<REPLACED-UUID-19>",
      "message": "Executing function",
      "team_id": 2,
      "timestamp": "2025-01-01 00:00:00.000",
    },
  },
  {
    "key": "<REPLACED-UUID-19>",
    "topic": "log_entries_test",
    "value": {
      "instance_id": "<REPLACED-UUID-19>",
      "level": "debug",
      "log_source": "hog_function",
      "log_source_id": "<REPLACED-UUID-19>",
      "message": "Function completed in <timing>ms. Sync: 0ms. Mem: 5892 bytes. Ops: 148. Event: 'https://example.com?email=[MASKED]&password=[MASKED]&token=[MASKED]&safe=value'",
      "team_id": 2,
      "timestamp": "2025-01-01 00:00:00.001",
    },
  },
  {
    "key": "<REPLACED-UUID-19>",
    "topic": "clickhouse_app_metrics2_test",
    "value": {
      "app_source": "hog_function",
      "app_source_id": "<REPLACED-UUID-19>",
      "count": 1,
      "metric_kind": "success",
      "metric_name": "succeeded",
      "team_id": 2,
      "timestamp": "2025-01-01 00:00:00.000",
    },
  },
  {
    "key": "<REPLACED-UUID-19>",
    "topic": "log_entries_test",
    "value": {
      "instance_id": "<REPLACED-UUID-20>",
      "level": "debug",
      "log_source": "hog_function",
      "log_source_id": "<REPLACED-UUID-20>",
      "message": "Executing plugin plugin-property-filter-plugin",
      "team_id": 2,
      "timestamp": "2025-01-01 00:00:00.000",
    },
  },
  {
    "key": "<REPLACED-UUID-20>",
    "topic": "log_entries_test",
    "value": {
      "instance_id": "<REPLACED-UUID-20>",
      "level": "debug",
      "log_source": "hog_function",
      "log_source_id": "<REPLACED-UUID-20>",
      "message": "Execution successful",
      "team_id": 2,
      "timestamp": "2025-01-01 00:00:00.001",
    },
  },
  {
    "key": "<REPLACED-UUID-20>",
    "topic": "clickhouse_app_metrics2_test",
    "value": {
      "app_source": "hog_function",
      "app_source_id": "<REPLACED-UUID-20>",
      "count": 1,
      "metric_kind": "success",
      "metric_name": "succeeded",
      "team_id": 2,
      "timestamp": "2025-01-01 00:00:00.000",
    },
  },
  {
    "key": "<REPLACED-UUID-20>",
    "topic": "log_entries_test",
    "value": {
      "instance_id": "<REPLACED-UUID-21>",
      "level": "debug",
      "log_source": "hog_function",
      "log_source_id": "<REPLACED-UUID-21>",
      "message": "Executing plugin plugin-semver-flattener-plugin",
      "team_id": 2,
      "timestamp": "2025-01-01 00:00:00.000",
    },
  },
  {
    "key": "<REPLACED-UUID-21>",
    "topic": "log_entries_test",
    "value": {
      "instance_id": "<REPLACED-UUID-21>",
      "level": "info",
      "log_source": "hog_function",
      "log_source_id": "<REPLACED-UUID-21>",
      "message": "found candidate property: , app_version,  matches , 1.2.3-beta+exp.sha.5114f85",
      "team_id": 2,
      "timestamp": "2025-01-01 00:00:00.001",
    },
  },
  {
    "key": "<REPLACED-UUID-21>",
    "topic": "log_entries_test",
    "value": {
      "instance_id": "<REPLACED-UUID-21>",
      "level": "info",
      "log_source": "hog_function",
      "log_source_id": "<REPLACED-UUID-21>",
      "message": "found candidate property: , lib_version,  matches , 2.0.0-alpha+001",
      "team_id": 2,
      "timestamp": "2025-01-01 00:00:00.002",
    },
  },
  {
    "key": "<REPLACED-UUID-21>",
    "topic": "log_entries_test",
    "value": {
      "instance_id": "<REPLACED-UUID-21>",
      "level": "debug",
      "log_source": "hog_function",
      "log_source_id": "<REPLACED-UUID-21>",
      "message": "Execution successful",
      "team_id": 2,
      "timestamp": "2025-01-01 00:00:00.003",
    },
  },
  {
    "key": "<REPLACED-UUID-21>",
    "topic": "clickhouse_app_metrics2_test",
    "value": {
      "app_source": "hog_function",
      "app_source_id": "<REPLACED-UUID-21>",
      "count": 1,
      "metric_kind": "success",
      "metric_name": "succeeded",
      "team_id": 2,
      "timestamp": "2025-01-01 00:00:00.000",
    },
  },
  {
    "key": "<REPLACED-UUID-21>",
    "topic": "log_entries_test",
    "value": {
      "instance_id": "<REPLACED-UUID-22>",
      "level": "debug",
      "log_source": "hog_function",
      "log_source_id": "<REPLACED-UUID-22>",
      "message": "Executing plugin plugin-taxonomy-plugin",
      "team_id": 2,
      "timestamp": "2025-01-01 00:00:00.000",
    },
  },
  {
    "key": "<REPLACED-UUID-22>",
    "topic": "log_entries_test",
    "value": {
      "instance_id": "<REPLACED-UUID-22>",
      "level": "debug",
      "log_source": "hog_function",
      "log_source_id": "<REPLACED-UUID-22>",
      "message": "Execution successful",
      "team_id": 2,
      "timestamp": "2025-01-01 00:00:00.001",
    },
  },
  {
    "key": "<REPLACED-UUID-22>",
    "topic": "clickhouse_app_metrics2_test",
    "value": {
      "app_source": "hog_function",
      "app_source_id": "<REPLACED-UUID-22>",
      "count": 1,
      "metric_kind": "success",
      "metric_name": "succeeded",
      "team_id": 2,
      "timestamp": "2025-01-01 00:00:00.000",
    },
  },
  {
    "key": "<REPLACED-UUID-22>",
    "topic": "log_entries_test",
    "value": {
      "instance_id": "<REPLACED-UUID-23>",
      "level": "debug",
      "log_source": "hog_function",
      "log_source_id": "<REPLACED-UUID-23>",
      "message": "Executing plugin plugin-timestamp-parser-plugin",
      "team_id": 2,
      "timestamp": "2025-01-01 00:00:00.000",
    },
  },
  {
    "key": "<REPLACED-UUID-23>",
    "topic": "log_entries_test",
    "value": {
      "instance_id": "<REPLACED-UUID-23>",
      "level": "debug",
      "log_source": "hog_function",
      "log_source_id": "<REPLACED-UUID-23>",
      "message": "Execution successful",
      "team_id": 2,
      "timestamp": "2025-01-01 00:00:00.001",
    },
  },
  {
    "key": null,
    "topic": "clickhouse_person_test",
    "value": {
      "created_at": "2024-01-01 12:30:45",
      "id": "<REPLACED-UUID-23>",
      "is_deleted": 0,
      "is_identified": 0,
      "properties": "{"$referrer":"https://other.com?email=old@test.com&token=xyz789","$current_url":"https://example.com?email=test@test.com&password=secret&token=abc123&safe=value","$geoip_latitude":58.4167,"$geoip_city_name":"Linköping","$geoip_longitude":15.6167,"$geoip_time_zone":"Europe/Stockholm","$initial_referrer":"https://other.com?email=old@test.com&token=xyz789","$creator_event_uuid":"<REPLACED-UUID-23>","$geoip_country_code":"SE","$geoip_country_name":"Sweden","$initial_current_url":"https://example.com?email=test@test.com&password=secret&token=abc123&safe=value","$geoip_continent_code":"EU","$geoip_continent_name":"Europe","$geoip_accuracy_radius":76,"$initial_geoip_latitude":58.4167,"$initial_geoip_city_name":"Linköping","$initial_geoip_longitude":15.6167,"$initial_geoip_time_zone":"Europe/Stockholm","$geoip_subdivision_1_code":"E","$geoip_subdivision_1_name":"Östergötland County","$initial_geoip_country_code":"SE","$initial_geoip_country_name":"Sweden","$initial_geoip_continent_code":"EU","$initial_geoip_continent_name":"Europe","$initial_geoip_accuracy_radius":76,"$initial_geoip_subdivision_1_code":"E","$initial_geoip_subdivision_1_name":"Östergötland County"}",
      "team_id": 2,
      "version": 0,
    },
  },
  {
    "key": null,
    "topic": "clickhouse_person_distinct_id_test",
    "value": {
      "distinct_id": "a8821accd5dcd728644298e978a736f4380ff2cd6afdf8354ac3d8a5ede1244a",
      "is_deleted": 0,
      "person_id": "<REPLACED-UUID-23>",
      "team_id": 2,
      "version": 0,
    },
  },
]
`;

exports[`IngestionConsumer typical event processing $identify event 1`] = `
[
  {
    "key": "<REPLACED-UUID-0>",
    "topic": "clickhouse_events_json_test",
    "value": {
      "created_at": "2025-01-01 00:00:00.000",
      "distinct_id": "user-1",
      "elements_chain": "",
      "event": "$identify",
      "person_created_at": "2025-01-01 00:00:00",
      "person_id": "<REPLACED-UUID-1>",
      "person_mode": "full",
      "person_properties": "{"$email":"test@test.com","$creator_event_uuid":"<REPLACED-UUID-2>"}",
      "project_id": 2,
      "properties": "{"$set":{"$email":"test@test.com"},"$ip":"127.0.0.1"}",
      "team_id": 2,
      "timestamp": "2025-01-01 00:00:00.000",
      "uuid": "<REPLACED-UUID-1>",
    },
  },
  {
    "key": null,
    "topic": "clickhouse_person_test",
    "value": {
      "created_at": "2025-01-01 00:00:00",
      "id": "<REPLACED-UUID-2>",
      "is_deleted": 0,
      "is_identified": 0,
      "properties": "{"$email":"test@test.com","$creator_event_uuid":"<REPLACED-UUID-2>"}",
      "team_id": 2,
      "version": 0,
    },
  },
  {
    "key": null,
    "topic": "clickhouse_person_distinct_id_test",
    "value": {
      "distinct_id": "user-1",
      "is_deleted": 0,
      "person_id": "<REPLACED-UUID-2>",
      "team_id": 2,
      "version": 0,
    },
  },
]
`;

exports[`IngestionConsumer typical event processing ai event 1`] = `
[
  {
    "key": "<REPLACED-UUID-0>",
    "topic": "clickhouse_events_json_test",
    "value": {
      "created_at": "2025-01-01 00:00:00.000",
      "distinct_id": "user-1",
      "elements_chain": "",
      "event": "$ai_generation",
      "person_created_at": "2025-01-01 00:00:00",
      "person_id": "<REPLACED-UUID-1>",
      "person_mode": "full",
      "person_properties": "{"$creator_event_uuid":"<REPLACED-UUID-2>"}",
      "project_id": 2,
      "properties": "{"$ai_model":"gpt-4","$ai_provider":"openai","$ai_input_tokens":100,"$ai_output_tokens":50,"$ip":"127.0.0.1","$ai_input_cost_usd":0.003,"$ai_output_cost_usd":0.003,"$ai_total_cost_usd":0.006}",
      "team_id": 2,
      "timestamp": "2025-01-01 00:00:00.000",
      "uuid": "<REPLACED-UUID-1>",
    },
  },
  {
    "key": null,
    "topic": "clickhouse_person_test",
    "value": {
      "created_at": "2025-01-01 00:00:00",
      "id": "<REPLACED-UUID-2>",
      "is_deleted": 0,
      "is_identified": 0,
      "properties": "{"$creator_event_uuid":"<REPLACED-UUID-2>"}",
      "team_id": 2,
      "version": 0,
    },
  },
  {
    "key": null,
    "topic": "clickhouse_person_distinct_id_test",
    "value": {
      "distinct_id": "user-1",
      "is_deleted": 0,
      "person_id": "<REPLACED-UUID-2>",
      "team_id": 2,
      "version": 0,
    },
  },
]
`;

exports[`IngestionConsumer typical event processing client ingestion warning 1`] = `
[
  {
    "key": null,
    "topic": "clickhouse_ingestion_warnings_test",
    "value": {
      "details": "{"eventUuid":"<REPLACED-UUID-0>","event":"$$client_ingestion_warning","distinctId":"user-1","message":"test"}",
      "source": "plugin-server",
      "team_id": 2,
      "timestamp": "2025-01-01 00:00:00.000",
      "type": "client_ingestion_warning",
    },
  },
]
`;

exports[`IngestionConsumer typical event processing event with common distinct_id that gets dropped 1`] = `
[
  {
    "key": "<REPLACED-UUID-0>",
    "topic": "clickhouse_events_json_test",
    "value": {
      "created_at": "2025-01-01 00:00:00.000",
      "distinct_id": "distinct_id",
      "elements_chain": "",
      "event": "$pageview",
      "person_created_at": "2025-01-01 00:00:00",
      "person_id": "<REPLACED-UUID-1>",
      "person_mode": "full",
      "person_properties": "{"$current_url":"http://localhost:8000","$creator_event_uuid":"<REPLACED-UUID-2>","$initial_current_url":"http://localhost:8000"}",
      "project_id": 2,
      "properties": "{"$current_url":"http://localhost:8000","$ip":"127.0.0.1","$set":{"$current_url":"http://localhost:8000"},"$set_once":{"$initial_current_url":"http://localhost:8000"}}",
      "team_id": 2,
      "timestamp": "2025-01-01 00:00:00.000",
      "uuid": "<REPLACED-UUID-1>",
    },
  },
  {
    "key": null,
    "topic": "clickhouse_person_test",
    "value": {
      "created_at": "2025-01-01 00:00:00",
      "id": "<REPLACED-UUID-2>",
      "is_deleted": 0,
      "is_identified": 0,
      "properties": "{"$current_url":"http://localhost:8000","$creator_event_uuid":"<REPLACED-UUID-2>","$initial_current_url":"http://localhost:8000"}",
      "team_id": 2,
      "version": 0,
    },
  },
  {
    "key": null,
    "topic": "clickhouse_person_distinct_id_test",
    "value": {
      "distinct_id": "distinct_id",
      "is_deleted": 0,
      "person_id": "<REPLACED-UUID-2>",
      "team_id": 2,
      "version": 0,
    },
  },
]
`;

exports[`IngestionConsumer typical event processing malformed event 1`] = `
[
  {
    "key": "<REPLACED-UUID-0>",
    "topic": "clickhouse_events_json_test",
    "value": {
      "created_at": "2025-01-01 00:00:00.000",
      "distinct_id": "user-1",
      "elements_chain": "",
      "event": "",
      "person_created_at": "2025-01-01 00:00:00",
      "person_id": "<REPLACED-UUID-1>",
      "person_mode": "full",
      "person_properties": "{"$current_url":"http://localhost:8000","$creator_event_uuid":"<REPLACED-UUID-2>","$initial_current_url":"http://localhost:8000"}",
      "project_id": 2,
      "properties": "{"$current_url":"http://localhost:8000","$ip":"127.0.0.1","$set":{"$current_url":"http://localhost:8000"},"$set_once":{"$initial_current_url":"http://localhost:8000"}}",
      "team_id": 2,
      "timestamp": "2025-01-01 00:00:00.000",
      "uuid": "<REPLACED-UUID-1>",
    },
  },
  {
    "key": null,
    "topic": "clickhouse_person_test",
    "value": {
      "created_at": "2025-01-01 00:00:00",
      "id": "<REPLACED-UUID-2>",
      "is_deleted": 0,
      "is_identified": 0,
      "properties": "{"$current_url":"http://localhost:8000","$creator_event_uuid":"<REPLACED-UUID-2>","$initial_current_url":"http://localhost:8000"}",
      "team_id": 2,
      "version": 0,
    },
  },
  {
    "key": null,
    "topic": "clickhouse_person_distinct_id_test",
    "value": {
      "distinct_id": "user-1",
      "is_deleted": 0,
      "person_id": "<REPLACED-UUID-2>",
      "team_id": 2,
      "version": 0,
    },
  },
]
`;

exports[`IngestionConsumer typical event processing malformed person information 1`] = `
[
  {
    "key": "<REPLACED-UUID-0>",
    "topic": "clickhouse_events_json_test",
    "value": {
      "created_at": "2025-01-01 00:00:00.000",
      "distinct_id": "distinct-id-1",
      "elements_chain": "",
      "event": "$pageview",
      "person_created_at": "2025-01-01 00:00:00",
      "person_id": "<REPLACED-UUID-1>",
      "person_mode": "full",
      "person_properties": "{"0":"I","1":"N","2":"V","3":"A","4":"L","5":"I","6":"D","$creator_event_uuid":"<REPLACED-UUID-2>"}",
      "project_id": 2,
      "properties": "{"$set":"INVALID","$unset":[[[["definitel invalid"]]]],"$ip":"127.0.0.1"}",
      "team_id": 2,
      "timestamp": "2025-01-01 00:00:00.000",
      "uuid": "<REPLACED-UUID-1>",
    },
  },
  {
    "key": null,
    "topic": "clickhouse_person_test",
    "value": {
      "created_at": "2025-01-01 00:00:00",
      "id": "<REPLACED-UUID-2>",
      "is_deleted": 0,
      "is_identified": 0,
      "properties": "{"0":"I","1":"N","2":"V","3":"A","4":"L","5":"I","6":"D","$creator_event_uuid":"<REPLACED-UUID-2>"}",
      "team_id": 2,
      "version": 0,
    },
  },
  {
    "key": null,
    "topic": "clickhouse_person_distinct_id_test",
    "value": {
      "distinct_id": "distinct-id-1",
      "is_deleted": 0,
      "person_id": "<REPLACED-UUID-2>",
      "team_id": 2,
      "version": 0,
    },
  },
]
`;

exports[`IngestionConsumer typical event processing multiple events 1`] = `
[
  {
    "key": "<REPLACED-UUID-0>",
    "topic": "clickhouse_events_json_test",
    "value": {
      "created_at": "2025-01-01 00:00:00.000",
      "distinct_id": "anonymous-id-1",
      "elements_chain": "",
      "event": "$pageview",
      "person_created_at": "2025-01-01 00:00:00",
      "person_id": "<REPLACED-UUID-1>",
      "person_mode": "full",
      "person_properties": "{"$current_url":"https://example.com/page1","$creator_event_uuid":"<REPLACED-UUID-2>","$initial_current_url":"https://example.com/page1"}",
      "project_id": 2,
      "properties": "{"$current_url":"https://example.com/page1","$ip":"127.0.0.1","$set":{"$current_url":"https://example.com/page1"},"$set_once":{"$initial_current_url":"https://example.com/page1"}}",
      "team_id": 2,
      "timestamp": "2025-01-01 00:00:00.000",
      "uuid": "<REPLACED-UUID-1>",
    },
  },
  {
    "key": "<REPLACED-UUID-2>",
    "topic": "clickhouse_events_json_test",
    "value": {
      "created_at": "2025-01-01 00:00:00.000",
      "distinct_id": "identified-id-1",
      "elements_chain": "",
      "event": "$identify",
      "person_created_at": "2025-01-01 00:00:00",
      "person_id": "<REPLACED-UUID-3>",
      "person_mode": "full",
      "person_properties": "{"$email":"test@test.com","$creator_event_uuid":"<REPLACED-UUID-4>"}",
      "project_id": 2,
      "properties": "{"$set":{"$email":"test@test.com"},"$anonymous_distinct_id":"anonymous-id-1","$ip":"127.0.0.1"}",
      "team_id": 2,
      "timestamp": "2025-01-01 00:00:00.000",
      "uuid": "<REPLACED-UUID-3>",
    },
  },
  {
    "key": "<REPLACED-UUID-4>",
    "topic": "clickhouse_events_json_test",
    "value": {
      "created_at": "2025-01-01 00:00:00.000",
      "distinct_id": "identified-id-1",
      "elements_chain": "",
      "event": "$pageview",
      "person_created_at": "2025-01-01 00:00:00",
      "person_id": "<REPLACED-UUID-5>",
      "person_mode": "full",
      "person_properties": "{"$email":"test@test.com","$current_url":"https://example.com/page2","$creator_event_uuid":"<REPLACED-UUID-5>","$initial_current_url":"https://example.com/page2"}",
      "project_id": 2,
      "properties": "{"$current_url":"https://example.com/page2","$ip":"127.0.0.1","$set":{"$current_url":"https://example.com/page2"},"$set_once":{"$initial_current_url":"https://example.com/page2"}}",
      "team_id": 2,
      "timestamp": "2025-01-01 00:00:00.000",
      "uuid": "<REPLACED-UUID-5>",
    },
  },
  {
    "key": null,
    "topic": "clickhouse_person_test",
    "value": {
      "created_at": "2025-01-01 00:00:00",
      "id": "<REPLACED-UUID-5>",
      "is_deleted": 0,
      "is_identified": 0,
      "properties": "{"$current_url":"https://example.com/page1","$creator_event_uuid":"<REPLACED-UUID-5>","$initial_current_url":"https://example.com/page1"}",
      "team_id": 2,
      "version": 0,
    },
  },
  {
    "key": null,
    "topic": "clickhouse_person_distinct_id_test",
    "value": {
      "distinct_id": "anonymous-id-1",
      "is_deleted": 0,
      "person_id": "<REPLACED-UUID-5>",
      "team_id": 2,
      "version": 0,
    },
  },
  {
    "key": null,
    "topic": "clickhouse_person_test",
    "value": {
      "created_at": "2025-01-01 00:00:00",
      "id": "<REPLACED-UUID-5>",
      "is_deleted": 0,
      "is_identified": 0,
      "properties": "{"$email":"test@test.com","$creator_event_uuid":"<REPLACED-UUID-5>"}",
      "team_id": 2,
      "version": 0,
    },
  },
  {
    "key": null,
    "topic": "clickhouse_person_distinct_id_test",
    "value": {
      "distinct_id": "identified-id-1",
      "is_deleted": 0,
      "person_id": "<REPLACED-UUID-5>",
      "team_id": 2,
      "version": 0,
    },
  },
  {
    "key": null,
    "topic": "clickhouse_person_test",
    "value": {
      "created_at": "2025-01-01 00:00:00",
      "id": "<REPLACED-UUID-5>",
      "is_deleted": 0,
      "is_identified": 0,
      "properties": "{"$email":"test@test.com","$current_url":"https://example.com/page2","$creator_event_uuid":"<REPLACED-UUID-5>","$initial_current_url":"https://example.com/page2"}",
      "team_id": 2,
      "version": 1,
    },
  },
]
`;

exports[`IngestionConsumer typical event processing normal event 1`] = `
[
  {
    "key": "<REPLACED-UUID-0>",
    "topic": "clickhouse_events_json_test",
    "value": {
      "created_at": "2025-01-01 00:00:00.000",
      "distinct_id": "user-1",
      "elements_chain": "",
      "event": "$pageview",
      "person_created_at": "2025-01-01 00:00:00",
      "person_id": "<REPLACED-UUID-1>",
      "person_mode": "full",
      "person_properties": "{"$current_url":"http://localhost:8000","$creator_event_uuid":"<REPLACED-UUID-2>","$initial_current_url":"http://localhost:8000"}",
      "project_id": 2,
      "properties": "{"$current_url":"http://localhost:8000","$ip":"127.0.0.1","$set":{"$current_url":"http://localhost:8000"},"$set_once":{"$initial_current_url":"http://localhost:8000"}}",
      "team_id": 2,
      "timestamp": "2025-01-01 00:00:00.000",
      "uuid": "<REPLACED-UUID-1>",
    },
  },
  {
    "key": null,
    "topic": "clickhouse_person_test",
    "value": {
      "created_at": "2025-01-01 00:00:00",
      "id": "<REPLACED-UUID-2>",
      "is_deleted": 0,
      "is_identified": 0,
      "properties": "{"$current_url":"http://localhost:8000","$creator_event_uuid":"<REPLACED-UUID-2>","$initial_current_url":"http://localhost:8000"}",
      "team_id": 2,
      "version": 0,
    },
  },
  {
    "key": null,
    "topic": "clickhouse_person_distinct_id_test",
    "value": {
      "distinct_id": "user-1",
      "is_deleted": 0,
      "person_id": "<REPLACED-UUID-2>",
      "team_id": 2,
      "version": 0,
    },
  },
]
`;

exports[`IngestionConsumer typical event processing person processing off 1`] = `
[
  {
    "key": "<REPLACED-UUID-0>",
    "topic": "clickhouse_events_json_test",
    "value": {
      "created_at": "2025-01-01 00:00:00.000",
      "distinct_id": "user-1",
      "elements_chain": "",
      "event": "$pageview",
      "person_created_at": "1970-01-01 00:00:05",
      "person_id": "<REPLACED-UUID-1>",
      "person_mode": "propertyless",
      "person_properties": "{}",
      "project_id": 2,
      "properties": "{"$process_person_profile":false,"$ip":"127.0.0.1"}",
      "team_id": 2,
      "timestamp": "2025-01-01 00:00:00.000",
      "uuid": "<REPLACED-UUID-1>",
    },
  },
]
`;
